examples/type_system/failing/156_unresolved_call_arg_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn takes_int(x: Int) -> Int { x }

fn main() -> Unit {
    let value: Int = takes_int(mystery_value)
}
